2009-03-17  Darin Adler  <darin@apple.com>

Reviewed by Adele Peterson.

        Bug 24477: REGRESSION (r41467): Page Down key scrolls two pages
        https://bugs.webkit.org/show_bug.cgi?id=24477
        rdar://problem/6674184

        * WebView/WebHTMLView.mm:
        (responderChainRespondsToSelector): Added.
        (-[WebHTMLView doCommandBySelector:]): Set eventWasHandled based on whether we
        can find a responder that responds to this selector rather than always assuming
        the selector will not be handled.



Canonical link: https://commits.webkit.org/33850@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@41793 268f45cc-cd09-0410-ab3c-d52691b4dbfc